--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pokenode-ts": "^1.20.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "4.1.11"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
